--- a/staticLib/staticLib.vcxproj.filters
+++ b/staticLib/staticLib.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="Inclusions.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="EnergyDistribution.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GrainsBoard.h">
@@ -48,6 +51,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Inclusions.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="EnergyDistribution.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
